examples/test/testpolicy17042.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17042
  namespace: namespace454
spec:
  podSelector:
    matchLabels:
      key7: value9
      key20: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value47
          key40: value34
          key24: value29
      podSelector:
        matchLabels:
          key30: value40
          key36: value20
